Fix css issue where main was covering the bottom of the header

--- a/styles.scss
+++ b/styles.scss
@@ -396,9 +396,9 @@ footer {
 main {
   padding: 0.5em 0 1.5em;
 }
-.home main {
-  margin-top: -1.5em;
-}
+// .home main {
+//   margin-top: -1.5em;
+// }
 article,
 .travel,
 .disclaimer,
